--- a/css/hero_panel.css
+++ b/css/hero_panel.css
@@ -18,6 +18,8 @@ header{
     justify-content: space-between;
     padding: 3px 20px;
     width: 100%;
+    z-index: 10;
+    opacity: 0.9;
 }
 
 nav{
@@ -52,6 +54,7 @@ nav{
 
 .ulnavegacion li{
     padding: 20px 10px;
+    transition: background-color .8s ease;
 }
 
 .ulnavegacion a{
@@ -83,6 +86,7 @@ main{
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .hero-content{
@@ -90,6 +94,7 @@ main{
     top: calc(50% - 150px);
     left: calc(50% - 150px);
     max-width: 300px;
+    z-index: 2;
 }
 
 .hero-content h2{
@@ -128,9 +133,11 @@ h2{
 }
 
 .precios{
-    display: flex;
+    /* display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: center; */
+    display: grid;
+    grid-template-columns: auto auto auto;
 }
 
 .card{
@@ -143,6 +150,12 @@ h2{
     display: flex;
     flex-flow: column;
     justify-content: space-between;
+    transition: transform 2s;
+    z-index: 1;
+}
+
+.precios .card:hover{
+    transform: scale(1.5);
 }
 
 .card h3{
@@ -220,6 +233,10 @@ footer ul li a{
     main{
         margin-top: 80px;
     }
+    .hero img{
+        object-fit: cover;
+        object-position: right;
+    }
 }
 
 /* Mobile first */
@@ -240,7 +257,7 @@ footer ul li a{
 
 @media (min-width: 1025px) {
     .container{
-        margin: 1rem auto;
+        margin: 5px auto;
     }   
 
     .precios{
@@ -256,4 +273,56 @@ footer ul li a{
         flex: 1 0 20%;
         align-self: center;
     }
+}
+
+.fullimage{
+    padding: 0;
+    margin: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.fullcenter{
+    text-align: center;
+}
+
+fieldset{
+    padding: 1em;
+    display: flex;
+    gap: 10px;
+    border: none;
+}
+
+input{
+    width: 50% ;
+}
+
+*{
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+article{
+    max-width: 1024px;
+    padding: 1rem;
+    background-color: greenyellow;
+}
+
+article p{
+    list-style: 1.5;
+    font-size: 1rem;
+    font-style: normal;
+    text-decoration: none;
+    text-align: justify;
+}
+
+article h2{
+    color: yellow;
+    text-shadow: 1px 1px 2px black;
 }
